tests/ui/invalid_generic.stderr
error: expected type to bind to, expected one of: `for`, parentheses, `fn`, `unsafe`, `extern`, identifier, `::`, `<`, square brackets, `*`, `&`, `!`, `impl`, `_`, lifetime
 --> tests/ui/invalid_generic.rs:1:37
  |
1 | #[derive_where::derive_where(Clone; where)]
  |                                     ^^^^^
